# pets-api

./: .gitignore  .pre-commit-config.yaml  .pylintrc  PROJECT_DOCS.md  PROJECT_DOCS.v20251202120000.md  README.md  ex_pylint.py  pyproject.toml  requirements.txt  storage.db
init/: schema.sql
src/controllers/: person_creator_controller.py  person_creator_controller_test.py  person_finder_controller.py  person_finder_controller_test.py  pet_deleter_controller.py  pet_deleter_controller_test.py  pet_lister_controller.py  pet_lister_controller_test.py  pets_creator_controller.py
src/errors/: error_handler.py
src/main/routes/: person_routes.py  pets_routes.py
src/main/server/: server.py
src/models/sqlite/entities/: people.py  pets.py
src/models/sqlite/interfaces/: people_repository.py  pets_repository.py
src/models/sqlite/repositories/: people_repository.py  pets_repository.py  pets_repository_test.py  repositories_test.py
src/models/sqlite/settings/: connection_test.py
src/validators/: person_creator_validator.py  person_creator_validator_test.py
src/views/: person_creator_view.py  person_finder_view.py  pet_deleter_view.py  pet_lister_view.py
src/views/http_types/: http_response.py
