[project]
name = "arquitetura-de-software"
version = "0.1.0"
description = "API REST para gerenciamento de pessoas e pets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "sqlalchemy>=2.0.44",
    "ruff>=0.8.4",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "mock-alchemy>=0.2.6",
    "pre-commit>=4.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Compatível com Python 3.12+
target-version = "py312"

# Mesma estrutura do projeto
line-length = 88

# Diretórios a ignorar
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "*.egg-info",
]

[tool.ruff.lint]
# Selecionar regras similares ao Pylint
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]

# Ignorar algumas regras (equivalente ao .pylintrc)
ignore = [
    "E501",  # line too long (deixa o formatter lidar com isso)
]

[tool.ruff.lint.per-file-ignores]
# Permitir imports não usados em __init__.py
"__init__.py" = ["F401"]
# Permitir assert em testes
"*_test.py" = ["S101"]
"test_*.py" = ["S101"]

[tool.ruff.format]
# Usar aspas duplas
quote-style = "double"

# Usar indentação com espaços
indent-style = "space"

# Respeitar magic trailing comma
skip-magic-trailing-comma = false
